@@ -1,3 +1,6 @@
+09-15-20 : Non-warriors should find honing defense and advanced defense
+            a little easier now. This puts them on par with warriors.
+
 09-15-20 : Fixed a crash bug in the Glacial Proc
 
 09-15-20 : Stat updates
